[metadata]
name = pySankeyBeta
version = 1.4.0
author = pierre-sassoulas
author_email = pierre.sassoulas@gmail.com
description = Make simple, pretty Sankey Diagrams (Beta version)
long_description = file: README.md
license = GNU General Public License v3.0
long_description_content_type = text/markdown
url = https://github.com/pierre-sassoulas/pySankey
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    matplotlib>=2.1.0rc1
    seaborn>=0.8.1
    numpy>=1.16.5
    pandas

[options.extras_require]
test =
    pylint~=2.14.5
    coverage
    coveralls
    pre-commit
    pytest-cov
